happy little sheep

--- a/engine.cfg
+++ b/engine.cfg
@@ -13,8 +13,9 @@ print_fps=true
 width=1280
 height=720
 resizable=false
-stretch_mode="2d"
+stretch_mode="disabled"
 
 [image_loader]
 
 filter=false
+gen_mipmaps=false
