--- a/engine.cfg
+++ b/engine.cfg
@@ -1,12 +1,8 @@
 [application]
 
-name="LD34"
+name="Sheep Escape"
 main_scene="res://main.scn"
 icon="res://icon.png"
-
-[debug]
-
-print_fps=true
 
 [display]
 
